<resources>
    <string name="app_name">Tamagotchi</string>
    <string name="login">Login : </string>
    <string name="password">Password : </string>
    <string name="loginbutton">Login</string>
    <string name="loginhint">Login</string>
    <string name="passwordhint">Password</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="oldpass">Old password</string>
    <string name="newpass">New password</string>
    <string name="confirmpass">Confirm password</string>
    <string name="newmail">New e-mail</string>
    <string name="newmobile">New mobile number</string>
    <string name="rememberme">Remember Me</string>
    <string name="signup">Not a Member yet? Sign Up here.</string>
    <string name="forgotemail">Please Enter your email</string>
    <string name="forgotemailhint">Email</string>
    <string name="forgotsubmitbutton">Submit</string>
    <string name="signupemail">Email</string>
    <string name="signupname">Full Name</string>
    <string name="signupmob">Mobile No.</string>
    <string name="signuplogin">Login id </string>
    <string name="signuppass">Password</string>
    <string name="signupconfpass">Confirm</string>
    <string name="profilename">Rohit Chauhan</string>
    <string name="minigamestitle" translatable="false">Fun Arena</string>
    <string name="facebook_app_id">1551819181550605</string>


    <string name="openDrawer">Open_drawer</string>
    <string name="closeDrawer">Close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_news">My news</string>
    <string name="nav_signfornews">Subscribe to news</string>
    <string name="nav_settings">Settings</string>
    <string name="navabout_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="descriptionabt">
         <![CDATA[
        What is Cybit? Cybit is a cybersecurity awareness application
        which helps the user to keep a track of its computer in a funny
        but attentive way.It connects with you PC or laptop and helps
        you get the security status of your laptop via a character on
        your mobile application. The health of your character will
        define the status of your computer. It’s a pretty handy
        application which can be used on the go as well. To educate
        the user on the security issues there are different types of
        quizzes which can be played after creating your own account.

        Cybit Team We are team of
        7 students from EPITA college in Paris working together to make the world aware about
        cybersecurity.
        Rohit Chauhan
        Mourad Melki
        Alain Khoury
        Jad Karaki
        Sadek Seridj
        Ibrahima Toure
        Eymerick Laloupo

        Application Map
        Login Page: Helps you create account and login
        Home Page: Shows the Tamagotchi health and character based on the computer health.
        Profile Page: Helps you update your profile and password
        Quiz Game: Helps you to upgrade your cybersecurity knowledge by indulging you in a quiz game.
        My Computers: Displays the number of devices you have and which one are you connected to.
        News: Displays all the links and channels which you can subscribe based on your taste.

        Version 1.0
         ]]>
        </string>
</resources>