<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signuppage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:addStatesFromChildren="false"
    android:orientation="vertical">

    <android.support.constraint.Guideline
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>

    <ImageView
        android:id="@+id/signuplogo"
        android:layout_width="300px"
        android:layout_height="300px"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/logo" />


    <EditText
        android:id="@+id/signupemailtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:ems="10"
        android:hint="@string/signupemail"
        android:inputType="text"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/signupnametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signupemailtext"
        app:layout_constraintLeft_toLeftOf="@id/signupemailtext"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/signupname"
        android:inputType="text"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/signupmobtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signupnametext"
        app:layout_constraintLeft_toLeftOf="@id/signupemailtext"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/signupmob"
        android:inputType="number"
        android:maxLength="10"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/signuplogintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signupmobtext"
        app:layout_constraintLeft_toLeftOf="@id/signupemailtext"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/signuplogin"
        android:inputType="text"
        android:maxLength="20"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/signuppasstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signuplogintext"
        app:layout_constraintLeft_toLeftOf="@id/signupemailtext"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/signuppass"
        android:inputType="textPassword"
        android:maxLength="10"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/signupconfpasstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signuppasstext"
        app:layout_constraintLeft_toLeftOf="@id/signupemailtext"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/signupconfpass"
        android:inputType="textPassword"
        android:textSize="20dp" />

    <Button
        android:id="@+id/signupsubmitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signupconfpasstext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/forgotsubmitbutton"
        android:textSize="20dp"
        style="@style/ButtonStyle.Borderless.ColoredText"/>
</android.support.constraint.ConstraintLayout>